src/isort/snapshots/ruff__isort__tests__separate_local_folder_imports.py.snap
---
source: src/isort/mod.rs
expression: checks
---
- kind:
    UnsortedImports: ~
  location:
    row: 1
    column: 0
  end_location:
    row: 5
    column: 0
  fix:
    content: "import os\nimport sys\n\nimport leading_prefix\n\nfrom . import leading_prefix\n"
    location:
      row: 1
      column: 0
    end_location:
      row: 5
      column: 0
  parent: ~

