src/isort/snapshots/ruff__isort__tests__separate_third_party_imports.py.snap
---
source: src/isort/mod.rs
expression: checks
---
- kind: UnsortedImports
  location:
    row: 1
    column: 0
  end_location:
    row: 4
    column: 9
  fix:
    patch:
      content: "import os\nimport sys\n\nimport numpy as np\nimport pandas as pd\n"
      location:
        row: 1
        column: 0
      end_location:
        row: 5
        column: 0
    applied: false

