src/isort/snapshots/ruff__isort__tests__skip.py.snap
---
source: src/isort/mod.rs
expression: checks
---
- kind: UnsortedImports
  location:
    row: 7
    column: 0
  end_location:
    row: 8
    column: 0
  fix:
    location:
      row: 7
      column: 0
    end_location:
      row: 8
      column: 0
    content: "import sys\n\n"
    message: Organize imports
  parent: ~
- kind: UnsortedImports
  location:
    row: 9
    column: 0
  end_location:
    row: 11
    column: 0
  fix:
    location:
      row: 9
      column: 0
    end_location:
      row: 11
      column: 0
    content: "import abc\nimport collections\n"
    message: Organize imports
  parent: ~

