src/isort/snapshots/ruff__isort__tests__split_on_trailing_comma_magic_trailing_comma.py.snap
---
source: src/isort/mod.rs
expression: checks
---
- kind: UnsortedImports
  location:
    row: 2
    column: 0
  end_location:
    row: 33
    column: 0
  fix:
    content: "from glob import (\n    escape,  # Ends with a comment, should still treat as magic trailing comma.\n    glob,\n    iglob,\n)\n\n# No magic comma, this will be rolled into one line\nfrom os import environ, execl, execv, path\nfrom sys import (\n    argv,\n    exit,\n    stderr,\n    stdout,\n)\n\n# These will be combined, _with_ a trailing comma, I think? Follow `isort` here.\nfrom a import (\n    b,\n    c,\n    d,\n)\n\n# These will be combined, but without a trailing comma.\nfrom foo import bar, baz\n"
    location:
      row: 2
      column: 0
    end_location:
      row: 33
      column: 0

